340835710: (fix) [Risk assessment] change page view when callout is visible (#461)

--- a/modules/ui/src/styles.scss
+++ b/modules/ui/src/styles.scss
@@ -15,6 +15,7 @@
  */
 @use '@angular/material' as mat;
 @import './theming/theme';
+@import 'src/theming/variables';
 
 html,
 body {
@@ -235,6 +236,10 @@ body
   #main:has(app-callout .info):not(:has(app-callout .error))
   app-progress:not(:has(.progress-content-empty)),
 body
+  #main:has(app-callout .info):not(:has(app-callout .error))
+  app-risk-assessment
+  .risk-assessment-container,
+body
   #main:has(app-callout .error):not(:has(app-callout .info))
   app-device-repository:not(:has(.device-repository-content-empty)),
 body
@@ -242,7 +247,11 @@ body
   app-history:not(:has(.results-content-empty)),
 body
   #main:has(app-callout .error):not(:has(app-callout .info))
-  app-progress:not(:has(.progress-content-empty)) {
+  app-progress:not(:has(.progress-content-empty)),
+body
+  #main:has(app-callout .error):not(:has(app-callout .info))
+  app-risk-assessment
+  .risk-assessment-container {
   margin-top: 96px;
 }
 
@@ -254,8 +263,16 @@ body
   app-history:not(:has(.results-content-empty)),
 body
   #main:has(app-callout .info):has(app-callout .error)
-  app-progress:not(:has(.progress-content-empty)) {
+  app-progress:not(:has(.progress-content-empty)),
+body
+  #main:has(app-callout .info):has(app-callout .error)
+  app-risk-assessment
+  .risk-assessment-container {
   margin-top: 156px;
+}
+
+body:has(app-risk-assessment .profiles-drawer) #main app-callout {
+  width: calc(100% - $profiles-drawer-width);
 }
 
 .text-nowrap {
